<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.calculator.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:height="50dp"
        android:hint="0"
        />
</LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:id="@+id/btnBackspace"
            android:layout_marginLeft="10dp"
            android:text="@string/btnbackspace"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCE"
            android:width="150dp"
            android:text="@string/btnCE"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn7"
            android:layout_marginLeft="10dp"
            android:width="75dp"
            android:text="@string/btn7"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn8"
            android:width="75dp"
            android:text="@string/btn8"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn9"
            android:width="75dp"
            android:text="@string/btn9"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDiv"
            android:width="75dp"
            android:text="@string/btnDiv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn4"
            android:layout_marginLeft="10dp"
            android:width="75dp"
            android:text="@string/btn4"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn5"
            android:width="75dp"
            android:text="@string/btn5"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn6"
            android:width="75dp"
            android:text="@string/btn6"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMul"
            android:width="75dp"
            android:text="@string/btnMul"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1"
            android:layout_marginLeft="10dp"
            android:width="75dp"
            android:text="@string/btn1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn2"
            android:width="75dp"
            android:text="@string/btn2"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn3"
            android:width="75dp"
            android:text="@string/btn3"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:width="75dp"
            android:text="@string/btnAdd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn0"
            android:layout_marginLeft="10dp"
            android:width="75dp"
            android:text="@string/btn0"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnC"
            android:width="75dp"
            android:text="@string/btnC"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEqu"
            android:width="75dp"
            android:text="@string/btnEqu"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSub"
            android:width="75dp"
            android:text="@string/btnSub"/>
    </LinearLayout>
</LinearLayout>
